Fix dark mode, add server logging

--- a/website/src/styles/tailwind.css
+++ b/website/src/styles/tailwind.css
@@ -5,6 +5,9 @@
 @import "tailwindcss/preflight.css" layer(base);
 @import "tailwindcss/utilities.css" layer(utilities);
 
+html {
+  @apply bg-white dark:bg-gray-800;
+}
 
 h1 {
   @apply text-5xl font-extrabold dark:text-white;
@@ -23,7 +26,7 @@ h4 {
 }
 
 p {
-  @apply text-gray-700 mb-3;
+  @apply text-gray-700 mb-3 dark:text-white;
 }
 
 header a {
